Bug 135921 - Accessibility Status of checkboxes in the spelling check options can not be changend when using keys menu.
Summary: Accessibility Status of checkboxes in the spelling check options can not be c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.5.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2020-08-19 14:14 UTC by Karl-Heinz Arkenau
Modified: 2023-10-24 11:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl-Heinz Arkenau 2020-08-19 14:14:07 UTC
Description:
The status of the options checkboxes in the spelling check dialogue can not be changed using keys.

Steps to Reproduce:
1.Open Writer
2. Start the spelling check
3. Open the options menu hitting the options button.

Actual Results:
The status of the checkboxes can not be changend using keys

Expected Results:
The status of the checkboxes shlold be changeable with keays


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Working with screenreader NVDa 2020.2
Comment 1 juergenkohler23 2020-09-03 07:23:40 UTC
I reproduced this bug with LibreOffice 7.0 and NVDA 2020.2 using Windows 10.
Comment 2 Matthias Doellert 2020-09-07 13:39:35 UTC
The bug could be reproduced.  Windows 10, Libre Office 7.0.0.3 (x64), NVDA 2020.2 and 2019.2.1
Comment 3 juergenkohler23 2020-09-10 07:19:20 UTC
Addition to my exact operating system information:

Windows
Edition	Windows 		10 Home
Version				1909
Operating system build		18363.1016

LibreOffice
Version:	7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU-Threads: 	4; BS: Windows 10.0 Build 18363; UI-Render: Skia/Vulkan; VCL: win
Locale: 	de-DE (de_DE); UI: de-DE
Calc: 		threaded
Comment 4 juergenkohler23 2021-05-26 09:34:59 UTC
The problem still exists

Windows
Edition Windows 10 Home
Version	20H2
Installed on ‎05.‎02.‎2021
Operating system build	19042.985

LibreOffice
Version: 7.1.3.2 (x64) / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 5 QA Administrators 2023-05-27 03:19:23 UTC Comment hidden (obsolete)
Comment 6 Aaron 2023-08-14 02:13:07 UTC
This bug is still present in

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-AU (fr_FR); UI: en-US
Calc: threaded
Comment 7 Michael Weghorn 2023-10-24 08:41:52 UTC
Pending Gerrit changes:

https://gerrit.libreoffice.org/c/core/+/158374
https://gerrit.libreoffice.org/c/core/+/158375

This makes toggling the state of the checkboxes and announcing the new state work for the options dialog of the spelling dialog that this bug report is about. 

As a side note: The autocorrect options dialog case still only partly works with these changes in place. Only the checkbox in the first column can be toggled using the keyboard, and the new value is not announced (s. the commit message in the two above-mentioned Gerrit changes for more details). I'll add a comment to tdf#88761 and tdf#135585 about that.
Comment 8 Commit Notification 2023-10-24 10:57:42 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6974c10901cc052bce23295ddff25530137e94c8

tdf#135921 a11y: Toggle listbox item checkbox on space

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-10-24 10:58:45 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eafef8fd195654f0e7dbd007bcc7fa0f6d29b599

tdf#135921 a11y Send event when toggling listbox checkbox

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.